test/corpus/core/ascii-identifiers.txt
================================================================================
Identifiers - reject Polish letters
:error
================================================================================

DEFINE VARIABLE ilość AS INTEGER NO-UNDO.

--------------------------------------------------------------------------------

================================================================================
Identifiers - reject accented Latin letters
:error
================================================================================

DEFINE VARIABLE café AS INTEGER NO-UNDO.

--------------------------------------------------------------------------------

================================================================================
Identifiers - reject Chinese letters
:error
================================================================================

DEFINE VARIABLE 数量 AS INTEGER NO-UNDO.

--------------------------------------------------------------------------------

================================================================================
Identifiers - reject Unicode numbers
:error
================================================================================

DEFINE VARIABLE value١ AS INTEGER NO-UNDO.

--------------------------------------------------------------------------------

================================================================================
Identifiers - reject Unicode case-fold equivalents
:error
================================================================================

DEFINE VARIABLE valueK AS INTEGER NO-UNDO.

--------------------------------------------------------------------------------

================================================================================
Identifiers - Unicode remains valid in strings and comments
================================================================================

/* zażółć gęślą jaźń */
MESSAGE "zażółć gęślą jaźń".
MESSAGE "編集".

--------------------------------------------------------------------------------

(source_code
  (comment (block_comment))
  (message_statement (string_literal))
  (message_statement (string_literal)))
