test/corpus/core/comments.txt
================================================================================
COMMENT
================================================================================

/* comment */
// comment
/***
 TRIPLE-STAR MULTILINE
 ***/
--------------------------------------------------------------------------------

(source_code
  (comment
    (block_comment))
  (comment
    (line_comment))
  (comment
    (block_comment)))
